--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "version": "0.0.1",
     
     "engines": { "node": ">= 0.6.x" },
+    "main": "lib/proxy.js",
         
     "dependencies": {
         "handlebars": ">=1.0.x"
